FIx deploy name

--- a/landing/public/index.html
+++ b/landing/public/index.html
@@ -378,7 +378,7 @@
                     <p>My journey started with basic Python programming, and I quickly became fascinated with how machines can learn from data and make intelligent decisions. I'm particularly interested in computer vision and natural language processing.</p>
                 </div>
                 <div class="about-image">
-                    <img src="assets/images/profile.jpg" alt="Federico" class="profile-img">
+                    <img src="assets/images/immagine_profilo_landing_page_github.jpg" alt="Federico" class="profile-img">
                     <div style="width: 300px; height: 300px; background: #e3ebff; border-radius: 50%; display: flex; align-items: center; justify-content: center; font-size: 5rem;">👨‍💻</div>
                 </div>
             </div>
@@ -520,5 +520,6 @@
 </body>
 </html><!-- Last update: 08/23/2025 21:28:14 -->
 <!-- Last update: 08/23/2025 21:36:23 -->
-   
+  
+ 
  
