--- a/landing/public/index.html
+++ b/landing/public/index.html
@@ -337,6 +337,11 @@
                 padding-right: 0;
                 margin-bottom: 30px;
             }
+            
+            .profile-img {
+                width: 250px;
+                height: 250px;
+            }
         }
     </style>
 </head>
@@ -378,8 +383,7 @@
                     <p>My journey started with basic Python programming, and I quickly became fascinated with how machines can learn from data and make intelligent decisions. I'm particularly interested in computer vision and natural language processing.</p>
                 </div>
                 <div class="about-image">
-                    <img src="assets/images/immagine_profilo_landing_page_github.jpg" alt="Federico" class="profile-img">
-                    <div style="width: 300px; height: 300px; background: #e3ebff; border-radius: 50%; display: flex; align-items: center; justify-content: center; font-size: 5rem;">👨‍💻</div>
+                    <img src="assets/images/immagine_profilo_landing_page_github.jpg" alt="Federico - AI and Machine Learning Student" class="profile-img">
                 </div>
             </div>
         </div>
@@ -479,7 +483,7 @@
         <div class="container">
             <h2 class="section-title">Get In Touch</h2>
             <p>I'm always interested in connecting with fellow AI enthusiasts, discussing new projects, or exploring collaboration opportunities.</p>
-            <a href="santillifede1234@gmail.com" class="btn">Send me an Email</a>
+            <a href="mailto:santillifede1234@gmail.com" class="btn">Send me an Email</a>
         </div>
     </section>
 
@@ -518,8 +522,4 @@
         });
     </script>
 </body>
-</html><!-- Last update: 08/23/2025 21:28:14 -->
-<!-- Last update: 08/23/2025 21:36:23 -->
-  
- 
- 
+</html>
