Change again deploy.yml content

--- a/landing/public/index.html
+++ b/landing/public/index.html
@@ -440,38 +440,41 @@
     </section>
 
     <!-- Skills Section -->
+    <!-- Skills Section -->
     <section id="skills" class="skills">
         <div class="container">
             <h2 class="section-title">Technical Skills</h2>
             <div class="skills-grid">
                 <div class="skill-category">
-                    <h3>Programming</h3>
+                    <h3>Programming & Data</h3>
                     <div class="skill-list">
                         <span class="skill-item">Python</span>
-                        <span class="skill-item">Java</span>
-                        <span class="skill-item">HTML/CSS</span>
-                        <span class="skill-item">JavaScript</span>
+                        <span class="skill-item">Pandas</span>
+                        <span class="skill-item">NumPy</span>
+                        <span class="skill-item">Data Analysis</span>
+                        <span class="skill-item">Data Visualization</span>
                     </div>
                 </div>
                 
                 <div class="skill-category">
-                    <h3>ML Libraries</h3>
+                    <h3>Machine Learning</h3>
                     <div class="skill-list">
                         <span class="skill-item">Scikit-learn</span>
-                        <span class="skill-item">TensorFlow</span>
-                        <span class="skill-item">Keras</span>
-                        <span class="skill-item">Pandas</span>
-                        <span class="skill-item">NumPy</span>
+                        <span class="skill-item">Supervised Learning</span>
+                        <span class="skill-item">Classification</span>
+                        <span class="skill-item">Regression</span>
+                        <span class="skill-item">Model Evaluation</span>
                     </div>
                 </div>
                 
                 <div class="skill-category">
                     <h3>Tools & Technologies</h3>
                     <div class="skill-list">
-                        <span class="skill-item">Git & GitHub</span>
                         <span class="skill-item">Jupyter Notebooks</span>
-                        <span class="skill-item">VS Code</span>
                         <span class="skill-item">Google Colab</span>
+                        <span class="skill-item">Git & GitHub</span>
+                        <span class="skill-item">VS Code</span>
+                        <span class="skill-item">Matplotlib/Seaborn</span>
                     </div>
                 </div>
             </div>
