--- a/landing/public/index.html
+++ b/landing/public/index.html
@@ -418,7 +418,7 @@
                             <span class="tech-tag">Scikit-learn</span>
                             <span class="tech-tag">Matplotlib</span>
                         </div>
-                        <a href="../projects/ml/make_friedman2/" class="project-link">View Project</a>
+                        <a href="https://github.com/fede07-ml/portfolio.git/projects/ml/make_friedman2/" class="project-link">View Project</a>
                     </div>
                 </div>
                 
@@ -451,8 +451,6 @@
                         <span class="skill-item">Python</span>
                         <span class="skill-item">Pandas</span>
                         <span class="skill-item">NumPy</span>
-                        <span class="skill-item">Data Analysis</span>
-                        <span class="skill-item">Data Visualization</span>
                     </div>
                 </div>
                 
@@ -461,7 +459,7 @@
                     <div class="skill-list">
                         <span class="skill-item">Scikit-learn</span>
                         <span class="skill-item">Supervised Learning</span>
-                        <span class="skill-item">Classification</span>
+                        <span class="skill-item">Pytorch</span>
                         <span class="skill-item">Regression</span>
                         <span class="skill-item">Model Evaluation</span>
                     </div>
