Fix issues with code

--- a/landing/public/index.html
+++ b/landing/public/index.html
@@ -406,7 +406,7 @@
                             <span class="tech-tag">Scikit-learn</span>
                             <span class="tech-tag">Pandas</span>
                         </div>
-                        <a href="../projects/ml/iris/" class="project-link">View Project</a>
+                        <a href="projects/iris.html" class="project-link" target="_blank">View on GitHub</a>" class="project-link">View Project</a>
                     </div>
                 </div>
                 
@@ -420,7 +420,7 @@
                             <span class="tech-tag">Scikit-learn</span>
                             <span class="tech-tag">Matplotlib</span>
                         </div>
-                        <a href="https://github.com/fede07-ml/portfolio.git/projects/ml/make_friedman2/" class="project-link">View Project</a>
+                        <a href="projects/friedman.html" class="project-link" target="_blank">View on GitHub</a>
                     </div>
                 </div>
                 
@@ -434,7 +434,7 @@
                             <span class="tech-tag">NumPy</span>
                             <span class="tech-tag">Math</span>
                         </div>
-                        <a href="https://github.com/fede07-ml" class="project-link">Coming Soon</a>
+                        <a href="https://github.com/fede07-ml" class="project-link" target="_blank">Coming Soon</a>
                     </div>
                 </div>
             </div>
@@ -486,8 +486,7 @@
         <div class="container">
             <h2 class="section-title">Get In Touch</h2>
             <p>I'm always interested in connecting with fellow AI enthusiasts, discussing new projects, or exploring collaboration opportunities.</p>
-            <a href="mailto:santillifede1234@gmail.com" class="btn">Send me an Email</a>
-        </div>
+            <a href="mailto:santillifede1234@gmail.com" class="btn">Send me an Email</a>        </div>
     </section>
 
     <!-- Footer -->
@@ -495,7 +494,7 @@
         <div class="container">
             <div class="social-links">
                 <a href="https://github.com/fede07-ml" aria-label="GitHub">GitHub</a>
-                <a href="https://linkedin.com/in/yourprofile" aria-label="LinkedIn">LinkedIn</a>
+                <a href="https://linkedin.com/in/federicosantilli" aria-label="LinkedIn">LinkedIn</a>
             </div>
             <p>&copy; <span id="current-year">2025</span> Federico. All rights reserved.</p>
         </div>
