Fix other issues with the code

--- a/landing/public/index.html
+++ b/landing/public/index.html
@@ -406,7 +406,7 @@
                             <span class="tech-tag">Scikit-learn</span>
                             <span class="tech-tag">Pandas</span>
                         </div>
-                        <a href="projects/iris.html" class="project-link" target="_blank">View on GitHub</a>" class="project-link">View Project</a>
+                        <a href="portfolio/iris/iris.html" class="project-link" target="_blank">View on GitHub</a>
                     </div>
                 </div>
                 
@@ -420,7 +420,7 @@
                             <span class="tech-tag">Scikit-learn</span>
                             <span class="tech-tag">Matplotlib</span>
                         </div>
-                        <a href="projects/friedman.html" class="project-link" target="_blank">View on GitHub</a>
+                        <a href="portfolio/friedman/friedman.html" class="project-link" target="_blank">View on GitHub</a>
                     </div>
                 </div>
                 
