--- a/landing/public/index.html
+++ b/landing/public/index.html
@@ -410,7 +410,7 @@
                             <span class="tech-tag">Scikit-learn</span>
                             <span class="tech-tag">Pandas</span>
                         </div>
-                        <a href="https://github.com/fede07-ml/portfolio/tree/main/projects/ml/iris" class="project-link" target="_blank">View on GitHub</a>
+                        <a href="https://github.com/fede07-ml/portfolio/tree/main/projects/ml/iris/iris.html" class="project-link" target="_blank">View on GitHub</a>
                     </div>
                 </div>
                 
@@ -423,8 +423,8 @@
                             <span class="tech-tag">Python</span>
                             <span class="tech-tag">Scikit-learn</span>
                             <span class="tech-tag">Matplotlib</span>
-                        </div>
-                        <a href="https://github.com/fede07-ml/portfolio/tree/main/projects/ml/friedman" class="project-link" target="_blank">View on GitHub</a>
+                        </div>d
+                        <a href="https://github.com/fede07-ml/portfolio/tree/main/projects/ml/friedman/friedman.html" class="project-link" target="_blank">View on GitHub</a>
                     </div>
                 </div>
                 
