Remove html projects files

--- a/landing/public/index.html
+++ b/landing/public/index.html
@@ -745,7 +745,7 @@
                             <span class="tech-tag">Pandas</span>
                             <span class="tech-tag">Matplotlib</span>
                         </div>
-                        <a href="https://github.com/fede07-ml/portfolio/tree/main/projects/ml/iris/iris.html" class="project-link" target="_blank" rel="noopener">
+                        <a href="https://github.com/fede07-ml/portfolio/tree/main/projects/ml/iris/Iris.ipynb" class="project-link" target="_blank" rel="noopener">
                             View Project <i class="fas fa-arrow-right"></i>
                         </a>
                     </div>
@@ -767,7 +767,7 @@
                             <span class="tech-tag">Matplotlib</span>
                             <span class="tech-tag">Seaborn</span>
                         </div>
-                        <a href="https://github.com/fede07-ml/portfolio/tree/main/projects/ml/friedman/friedman.html" class="project-link" target="_blank" rel="noopener">
+                        <a href="https://github.com/fede07-ml/portfolio/tree/main/projects/ml/friedman/MakeFriedMan2" class="project-link" target="_blank" rel="noopener">
                             View Project <i class="fas fa-arrow-right"></i>
                         </a>
                     </div>
